cropping imgs, og fix, location icon svg

--- a/css/min.css
+++ b/css/min.css
@@ -3824,6 +3824,7 @@ figcaption {
   right: -1.1em;
 }
 .gallery-thumbnail {
+  filter: grayscale() brightness(0.5);
   z-index: 1;
   width: 100%;
   height: 100%;
@@ -5885,7 +5886,7 @@ figcaption {
 }
 .footer-link {
   z-index: 10;
-  color: var(--red-4);
+  color: var(--white);
   text-align: center;
   letter-spacing: 0.05em;
   text-indent: 0.05em;
@@ -5900,7 +5901,7 @@ figcaption {
   position: relative;
 }
 .footer-link:hover {
-  color: var(--white);
+  color: var(--red-4);
 }
 .footer-link.w--current {
   /* border-color: var(--white); */
@@ -7898,7 +7899,7 @@ figcaption {
   border-right: 1px solid var(--red-4);
   border-bottom: 1px solid var(--red-4);
   border-left: 1px solid var(--red-4);
-  color: var(--red-4);
+  color: var(--white);
   text-transform: uppercase;
   margin-bottom: 4em;
   padding: 2em 3em;
